fix projects overflow problem

--- a/projects.css
+++ b/projects.css
@@ -91,8 +91,7 @@ nav.active>.menu+.dropdown-menu {
 }
 
 main {
-    height: 85vh;    
-    overflow: scroll;
+    
 }
 
 .projects {
